--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
+    <title>Anand Baburajan</title>
+    <style>
+    	body {
+    	    background-color: #0B0E0E;
+    	    color: #ffffff;
+    	    font-family: 'IBM Plex Sans', sans-serif;
+    	    font-size: 1.3em;
+    	}
+    	a {
+    	   text-decoration: underline;
+    	   color: #ffffff;
+    	}
+    </style>
+  </head>
+  <body>
+    Hi there — I’m Anand Baburajan.
+    <p>
+    I'm on <a href="https://github.com/anandbaburajan/">GitHub</a>.<br>
+    I'm on <a href="https://twitter.com/anandbaburajan">Twitter</a>.<br>
+    I'm on <a href="https://www.linkedin.com/in/anandbaburajan/">LinkedIn</a> too.<br>
+    </p>
+    <p>
+    <a href="https://anandbaburajan.github.io/static/resume.pdf">Here</a>'s my resume.
+    </p>
+    <p>
+    <a href="mailto:anandbaburajan@gmail.com">Here</a>'s my email address.
+    </p>
+    <!--
+    <p>
+    <a href="https://www.youtube.com/watch?v=sYmQQn_ZSys">Here</a>'s a rocket's first stage landing on a droneship.
+    </p>
+    --> 
+  </body>
+</html>
