Added target blank

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
   <body>
     Hi there — I’m Anand Baburajan.
     <p>
-    I'm on <a href="https://github.com/anandbaburajan/">GitHub</a>.<br>
-    I'm on <a href="https://twitter.com/anandbaburajan">Twitter</a>.<br>
-    I'm on <a href="https://www.linkedin.com/in/anandbaburajan/">LinkedIn</a> too.<br>
+    I'm on <a href="https://github.com/anandbaburajan/" target="_blank">GitHub</a>.<br>
+    I'm on <a href="https://twitter.com/anandbaburajan" target="_blank">Twitter</a>.<br>
+    I'm on <a href="https://www.linkedin.com/in/anandbaburajan/" target="_blank">LinkedIn</a> too.<br>
     </p>
     <p>
-    <a href="https://anandbaburajan.github.io/static/resume.pdf">Here</a>'s my resume.
+    <a href="https://anandbaburajan.github.io/static/resume.pdf" target="_blank">Here</a>'s my resume.
     </p>
     <p>
-    <a href="mailto:anandbaburajan@gmail.com">Here</a>'s my email address.
+    <a href="mailto:anandbaburajan@gmail.com" target="_blank">Here</a>'s my email address.
     </p>
     <!--
     <p>
