--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Anand Baburajan</title>
     <style>
     	body {
-    	  background-color: #0B0E0E;
-    	  color: #ffffff;
+    	  background-color: #1C223A;
+    	  color: #C7D8EB;
     	  font-family: 'IBM Plex Sans', sans-serif;
     	}
     	a {
     	 text-decoration: underline;
-    	 color: #ffffff;
+    	 color: #C7D8EB;
     	}
     	.container {
     	  font-size: 1.3em;
@@ -34,7 +34,7 @@
   </head>
   <body>
     <div class="container">
-      Hi there!
+      Hi there - I'm Anand.
       <p>
         I'm on <a href="https://github.com/anandbaburajan/" target="_blank">GitHub</a>.<br>
         I'm on <a href="https://twitter.com/anandbaburajan" target="_blank">Twitter</a>.<br>
