--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
     <title>Anand Baburajan</title>
     <style>
     	body {
-    	  background-color: #1C223A;
-    	  color: #C7D8EB;
-    	  font-family: 'IBM Plex Sans', sans-serif;
+    		background-color: #1C223A;
+    	  	color: #C7D8EB;
+    	  	font-family: 'IBM Plex Sans', sans-serif;
     	}
     	a {
-    	 text-decoration: underline;
-    	 color: #C7D8EB;
+    		text-decoration: underline;
+    	 	color: #C7D8EB;
     	}
-    	.container {
-    	  font-size: 1.3em;
-	  margin: 0;
-	  position: absolute;
-	  top: 50%;
-	  left: 50%;
-	  transform: translate(-50%, -50%);
+    	#container {
+    	  	font-size: 1.3em;
+	  		margin: 0;
+	  		position: absolute;
+	  		top: 50%;
+	  		left: 50%;
+	  		transform: translate(-50%, -50%);
     	}
-	@media (min-width: 600px) {
-	 .container {
-	     font-size: 3em;
-	 }
-	}
+		@media (min-width: 600px) {
+	 		#container {
+	     		font-size: 3em;
+	 		}
+		}
     </style>
   </head>
   <body>
-    <div class="container">
+    <div id="container">
       Hi there - I'm Anand.
       <p>
         I'm on <a href="https://github.com/anandbaburajan/" target="_blank">GitHub</a>.<br>
