--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Anand Baburajan</title>
     <style>
     	body {
-    		background-color: #1C223A;
-    	  	color: #C7D8EB;
+    		background: black url(./static/stars.png) repeat;
+    	  	color: #ffffff;
     	  	font-family: 'IBM Plex Sans', sans-serif;
     	}
     	a {
     		text-decoration: underline;
-    	 	color: #C7D8EB;
+    	 	color: #ffffff;
     	}
     	#container {
     	  	font-size: 1.3em;
