--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Anand Baburajan</title>
     <style>
     	body {
-    		background: black url(./static/stars.png) repeat;
+    		background: #000000;
     	  	color: #ffffff;
     	  	font-family: 'IBM Plex Sans', sans-serif;
     	}
