--- a/index.html
+++ b/index.html
@@ -5,26 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@200&display=swap" rel="stylesheet">
     <title>Anand Baburajan</title>
     <style>
+      *::selection {
+        color: #000000;
+        background-color: rgba(255,255,255,0.99);
+      }
+
     	body {
     		background: #000000;
-    	  	color: #ffffff;
-    	  	font-family: 'IBM Plex Sans', sans-serif;
+    	  color: #ffffff;
+        font-family: 'Montserrat Alternates', sans-serif;
+        font-weight: 300;
     	}
+
     	a {
-    		text-decoration: underline;
-    	 	color: #ffffff;
+        color: #FFFFFF;
+        text-decoration: none;
+        background-image: linear-gradient(#000000, #000000), linear-gradient(#FFFFFF, #FFFFFF);
+        background-size: 80% 1px, 0 2px;
+        background-position: 100% 100%, 50% 100%;
+        background-repeat: no-repeat;
+        transition: background-size 0.3s linear;
     	}
+
+      a:hover {
+        background-size: 0 1px, 100% 2px;
+      }
+
     	#container {
-    	  	font-size: 1.3em;
+    	  font-size: 1.3em;
 	  		margin: 0;
 	  		position: absolute;
 	  		top: 50%;
 	  		left: 50%;
 	  		transform: translate(-50%, -50%);
     	}
+
 		@media (min-width: 600px) {
 	 		#container {
 	     		font-size: 3em;
