--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
     	}
     	#container {
     	  	font-size: 1.3em;
-	  		margin: 0;
-	  		position: absolute;
-	  		top: 50%;
-	  		left: 50%;
-	  		transform: translate(-50%, -50%);
+	  	margin: 0;
+	  	position: absolute;
+	  	top: 50%;
+	  	left: 50%;
+	  	transform: translate(-50%, -50%);
     	}
-		@media (min-width: 600px) {
-	 		#container {
+	@media (min-width: 600px) {
+	 	#container {
 	     		font-size: 3em;
-	 		}
-		}
+	 	}
+	}
     </style>
+    <meta name="google-site-verification" content="GKjFsC7okWqqrYECQDwvMTs6L6J6mtwsJL3pep51pxk" />
   </head>
   <body>
     <div id="container">
