--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
     <title>Anand Baburajan</title>
     <style>
     	body {
     		background: #000000;
     	  	color: #ffffff;
-    	  	font-family: 'IBM Plex Sans', sans-serif;
+    	  	font-family: "Space Grotesk", sans-serif;
+    	  	font-weight: 500;
     	}
     	a {
     		text-decoration: underline;
@@ -35,7 +36,7 @@
   </head>
   <body>
     <div id="container">
-      Hi there - I'm Anand.
+      Hi there — I'm Anand.
       <p>
         I'm on <a href="https://github.com/anandbaburajan/" target="_blank">GitHub</a>.<br>
         I'm on <a href="https://twitter.com/anandbaburajan" target="_blank">Twitter</a>.<br>
