--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  	<title>Anand Baburajan</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
-    <title>Anand Baburajan</title>
+    <meta name=”description” content="Hi there — I'm Anand." />
     <style>
+	    @font-face {
+	    	font-family: 'Space Grotesk';
+	      	font-style: normal;
+	      	font-weight: 500;
+	      	src: local(''), url('./static/space-grotesk-v5-latin-500.woff2') format('woff2'), url('./static/space-grotesk-v5-latin-500.woff') format('woff');
+	    }
     	body {
     		background: #000000;
     	  	color: #ffffff;
-    	  	font-family: "Space Grotesk", sans-serif;
-    	  	font-weight: 500;
+    	  	font-family: "Space Grotesk";
     	}
     	a {
     		text-decoration: underline;
