--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     	}
 		@media (min-width: 600px) {
 	 		#container {
-	     		font-size: 3em;
+	     		font-size: 2.5em;
 	 		}
 		}
     </style>
@@ -42,16 +42,22 @@
     <div id="container">
       Hi there — I'm Anand.
       <p>
+        I love tech, space and humans.
+       </p>
+      <p>
         I'm on <a href="https://github.com/anandbaburajan/" target="_blank">GitHub</a>.<br>
         I'm on <a href="https://twitter.com/anandbaburajan" target="_blank">Twitter</a>.<br>
         I'm on <a href="https://www.linkedin.com/in/anandbaburajan/" target="_blank">LinkedIn</a> too.
       </p>
       <p>
-        <a href="https://anandbaburajan.github.io/static/resume.pdf" target="_blank">Here</a>'s my resume.<br>
+        <a href="https://anandbaburajan.github.io/static/resume.pdf" target="_blank">Here</a>'s my résumé.<br>
         <a href="mailto:anandbaburajan@gmail.com" target="_blank">Here</a>'s my email address.
       </p>
       <p>
         <a href="https://www.youtube.com/watch?v=sYmQQn_ZSys" target="_blank">Here</a>'s a rocket landing.
+      </p>
+      <p>
+		:)
       </p>
     </div>
   </body>
