--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="container">
       Hi there — I'm Anand.
       <p>
-      	I love tech, space, psychology and philosophy, and I'm currently working as a software engineer intern at HackerRank. None of us have any idea why we exist, and it seems like the best way to pass the time before we turn back into cosmic dust is to do exciting things and help other humans do the same. My pastime activities include reading books, listening to stories, exploring our planet and contributing to open source projects including LiberTEM, RocketMeet and SerenityOS. I strive to utilize my interest in tech to work on challenging problems ranging anywhere from making information more available to making humans a multiplanetary species.
+      	I love tech, space, psychology and philosophy, and I'm currently working as a software engineer intern at <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a>. None of us have any idea why we exist, and it seems like the best way to pass the time before we turn back into cosmic dust is to do exciting things and help other humans do the same. My pastime activities include reading books, listening to stories, exploring our planet and contributing to open source projects including <a href="https://github.com/LiberTEM" target="_blank">LiberTEM</a>,  <a href="https://github.com/RocketMeet" target="_blank">RocketMeet</a> and <a href="https://github.com/SerenityOS/" target="_blank">SerenityOS</a>. I strive to utilize my interest in tech to work on challenging problems ranging anywhere from making information more available to making humans a multiplanetary species.
       </p>
       <p>
         I'm on <a href="https://github.com/anandbaburajan/" target="_blank">GitHub</a>.<br>
