--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
       	I like tech, space, psychology and philosophy, among many other things. Currently I'm working at <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a> as a software engineer intern. I'm an atheist, an existential nihilist and I practice most of the Buddhist principles. None of us have any idea why we exist, so it seems like the best way to pass the time before we turn back into cosmic dust is to do exciting things and help other humans do the same. My pastime activities include reading books, listening to stories, building things, exploring our planet and contributing to open source projects including <a href="https://github.com/LiberTEM" target="_blank">LiberTEM</a>, <a href="https://github.com/RocketMeet" target="_blank">RocketMeet</a> and <a href="https://github.com/SerenityOS/" target="_blank">SerenityOS</a>. I strive to work on challenging problems ranging anywhere from accelerating civilization by improving the mental state of students to making humans a multiplanetary species.
       </p>
       <p>
-        I'm on <a href="https://github.com/anandbaburajan/" target="_blank">GitHub</a>.<br>
-        I'm on <a href="https://twitter.com/anandbaburajan" target="_blank">Twitter</a>.<br>
-        I'm on <a href="https://www.linkedin.com/in/anandbaburajan/" target="_blank">LinkedIn</a> too.
+        I'm on <a href="https://github.com/anandbaburajan/" target="_blank">GitHub</a>, <a href="https://twitter.com/anandbaburajan" target="_blank">Twitter</a> and <a href="https://www.linkedin.com/in/anandbaburajan/" target="_blank">LinkedIn</a> too.
       </p>
       <p>
-        <a href="https://anandbaburajan.github.io/static/resume.pdf" target="_blank">Here</a>'s my résumé.<br>
-        <a href="mailto:anandbaburajan@gmail.com" target="_blank">Here</a>'s my email address.
+        <a href="https://anandbaburajan.github.io/static/resume.pdf" target="_blank">Here</a>'s my résumé.
       </p>
       <p>
-        <a href="https://www.youtube.com/watch?v=sYmQQn_ZSys" target="_blank">Here</a>'s a rocket landing.
+        <a href="mailto:anandbaburajan@gmail.com" target="_blank">Here</a>'s my email address. Feel free to get in touch!
+      </p>	
+      <p>
+        <a href="https://www.youtube.com/watch?v=sYmQQn_ZSys" target="_blank">Here</a>'s a rocket landing. Because, why not?
       </p>
       <p>
 		:)
