--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 	      	src: local(''), url('./static/space-grotesk-v5-latin-500.woff2') format('woff2'), url('./static/space-grotesk-v5-latin-500.woff') format('woff');
 	    }
     	body {
-    		background: #121212;
-    	  	color: #E4E6EB;
+    		background: #1a1a1a;
+    	  	color: #949494;
     	  	font-family: "Space Grotesk";
     	}
     	a {
     		text-decoration: underline;
-    	 	color: #E4E6EB;
+    	 	color: #949494;
     	}
     	#container {
-    	  	font-size: 1em;
+    	  	font-size: 0.8em;
 	  		margin: 0;
 	  		padding: 1em;
     	}
 		@media (min-width: 600px) {
 	 		#container {
-	     		font-size: 1.5em;
+	     		font-size: 1.2em;
 	  			margin: 0;
 	  			transform: translate(-50%, -50%);
 		  		position: absolute;
