--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </head>
   <body>
     <div id="container">
-      Hi there — I'm Anand.
+      Hii — I'm Anand.
       <p>
       	I particularly like tech, space, philosophy and psychology. Currently I'm having fun at <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a> working as a software engineer intern. I'm an existential nihilist and I pass the time before turning back into cosmic dust by learning and building things, loving an awe-inspiring and sweet human, reading books, listening to stories, stargazing, exploring our planet, contributing to open source projects including <a href="https://github.com/LiberTEM" target="_blank">LiberTEM</a>, <a href="https://github.com/RocketMeet" target="_blank">RocketMeet</a> and <a href="https://github.com/SerenityOS/" target="_blank">SerenityOS</a>, and helping other humans get closer to their goals whenever I have a chance. I strive to work on challenging problems ranging anywhere from accelerating civilization by improving the mental state of students to making humans a multiplanetary species.
       </p>
