--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	    	font-family: 'Space Grotesk';
 	      	font-style: normal;
 	      	font-weight: 500;
-		font-display: swap,
+		font-display: swap;
 	      	src: local(''), url('./static/space-grotesk-v5-latin-500.woff2') format('woff2'), url('./static/space-grotesk-v5-latin-500.woff') format('woff');
 	    }
     	body {
