--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     	}
     	a {
     		text-decoration: underline;
-    	 	color: #949494;
+    	 	color: #b1b1b1;
     	}
     	a:hover {
     	 	color: #cecece;
@@ -48,7 +48,7 @@
     <div id="container">
       Hi, I'm Anand.
       <p>
-      	I particularly like tech, space, philosophy and psychology. These days I'm building <a href="https://www.kukkee.com/" target="_blank">Kukkee</a>, contributing to <a href="https://libertem.github.io/" target="_blank">LiberTEM</a> and learning computer science. I'm an optimistic nihilist and I pass the time before turning back into cosmic dust by learning and building things, loving an awe-inspiring and sweet human, reading books and blogs, listening to stories, stargazing, exploring our planet, cooking, contributing to open source projects, empowering people around me, going out for walks with my brother and dog, watching movies and listening to music.
+      	I particularly like tech, space, philosophy and psychology. These days I'm building <a href="https://www.kukkee.com/" target="_blank">Kukkee</a>, contributing to <a href="https://libertem.github.io/" target="_blank">LiberTEM</a>, and learning computer science. I'm an optimistic nihilist and I pass the time before turning back into cosmic dust by learning and building things, loving an awe-inspiring and sweet human, reading books and blogs, listening to stories, stargazing, exploring our planet, cooking, contributing to open source projects, empowering people around me, going out for walks with my brother and dog, watching movies and listening to music.
       </p>
       <p>
         In the past, I've worked at <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a> as an intern, where I built the HackerRank Interviews for Slack integration, along with several other features. I have been a <a href="https://summerofcode.withgoogle.com/archive/2020/projects/5402292951449600" target="_blank">Google Summer of Code '20</a> student at LiberTEM (under the PSF), where I built features for handling sync/acquisition issues and reshaping 4D STEM datasets. That experience really changed the way I look at open source, which led me to start FOSS OpenHack '20 — a program which helped 25+ students with building 10+ open source projects and contributing to 5+ major open source organisations. I also used to do WordPress development for my parents' <a href="https://www.telecomlead.com/" target="_blank">news sites</a>, and for clients as a freelancer, and wrote and produced videos on gadget reviews at GizmoLead. 
