Responsiveness for specific monitors

--- a/index.html
+++ b/index.html
@@ -1,64 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  	<title>Anand Baburajan</title>
+    <title>Anand Baburajan</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name=”description” content="Hi there — I'm Anand." />
+    <meta name="”description”" content="Hi there — I'm Anand." />
     <style>
-	    @font-face {
-	    	font-family: 'Space Grotesk';
-	      	font-style: normal;
-	      	font-weight: 500;
-		font-display: block;
-	      	src: local(''), url('./static/space-grotesk-v5-latin-500.woff2') format('woff2'), url('./static/space-grotesk-v5-latin-500.woff') format('woff');
-	    }
-    	body {
-    		background: #1a1a1a;
-    	  	color: #b1b1b1;
-    	  	font-family: "Space Grotesk";
-    	}
-    	a {
-    		text-decoration: underline;
-    	 	color: #b1b1b1;
-    	}
-    	a:hover {
-    	 	color: #cecece;
-    	}
-    	#container {
-    	  	font-size: 0.8em;
-	  		margin: 0;
-	  		padding: 1em;
-    	}
-		@media (min-width: 600px) {
-	 		#container {
-	     		font-size: 1.2em;
-	  			margin: 0;
-	  			transform: translate(-50%, -50%);
-		  		position: absolute;
-		  		top: 50%;
-		  		left: 50%;
-	 		}
-		}
+      @font-face {
+        font-family: "Space Grotesk";
+        font-style: normal;
+        font-weight: 500;
+        font-display: block;
+        src: local(""),
+          url("./static/space-grotesk-v5-latin-500.woff2") format("woff2"),
+          url("./static/space-grotesk-v5-latin-500.woff") format("woff");
+      }
+      body {
+        background: #1a1a1a;
+        color: #b1b1b1;
+        font-family: "Space Grotesk";
+      }
+      a {
+        text-decoration: underline;
+        color: #b1b1b1;
+      }
+      a:hover {
+        color: #cecece;
+      }
+      #container {
+        font-size: 0.8em;
+        margin: 0;
+        padding: 1em;
+      }
+      @media (min-width: 600px) {
+        #container {
+          font-size: 1.2em;
+          margin: 0;
+          transform: translate(-50%, 0%);
+          position: absolute;
+          left: 50%;
+        }
+      }
     </style>
-    <meta name="google-site-verification" content="GKjFsC7okWqqrYECQDwvMTs6L6J6mtwsJL3pep51pxk" />
+    <meta
+      name="google-site-verification"
+      content="GKjFsC7okWqqrYECQDwvMTs6L6J6mtwsJL3pep51pxk"
+    />
   </head>
   <body>
     <div id="container">
       Hi, I'm Anand.
       <p>
-      	I particularly like tech, space, philosophy and psychology. These days I'm building <a href="https://www.kukkee.com/" target="_blank">Kukkee</a>, contributing to <a href="https://libertem.github.io/" target="_blank">LiberTEM</a>, and learning computer science. I'm an optimistic nihilist and I pass the time before turning back into cosmic dust by learning and building things, loving an awe-inspiring and sweet human, reading books and blogs, listening to stories, stargazing, exploring our planet, cooking, contributing to open source projects, empowering people around me, going out for walks with my brother and dog, watching movies and listening to music.
+        I particularly like tech, space, philosophy and psychology. These days
+        I'm building
+        <a href="https://www.kukkee.com/" target="_blank">Kukkee</a>,
+        contributing to
+        <a href="https://libertem.github.io/" target="_blank">LiberTEM</a>, and
+        learning computer science. I'm an optimistic nihilist and I pass the
+        time before turning back into cosmic dust by learning and building
+        things, loving an awe-inspiring and sweet human, reading books and
+        blogs, listening to stories, stargazing, exploring our planet, cooking,
+        contributing to open source projects, empowering people around me, going
+        out for walks with my brother and dog, watching movies and listening to
+        music.
       </p>
       <p>
-        In the past, I've worked at <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a> as an intern, where I built the HackerRank Interviews for Slack integration, along with several other features. I have been a <a href="https://summerofcode.withgoogle.com/archive/2020/projects/5402292951449600" target="_blank">Google Summer of Code '20</a> student at LiberTEM (under the PSF), where I built features for handling sync/acquisition issues and reshaping 4D STEM datasets. That experience really changed the way I look at open source, which led me to start <a href="https://openhack.gitbook.io/openhack-20/" target="_blank">FOSS OpenHack '20</a> — a program which helped 25+ students with building 10+ open source projects and contributing to 5+ major open source organisations. I also used to do WordPress development for my parents' <a href="https://www.telecomlead.com/" target="_blank">news sites</a>, and for clients as a freelancer, and used to write articles and produce videos about gadgets at GizmoLead. 
+        In the past, I've worked at
+        <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a> as
+        an intern, where I built the HackerRank Interviews for Slack
+        integration, along with several other features. I have been a
+        <a
+          href="https://summerofcode.withgoogle.com/archive/2020/projects/5402292951449600"
+          target="_blank"
+          >Google Summer of Code '20</a
+        >
+        student at LiberTEM (under the PSF), where I built features for handling
+        sync/acquisition issues and reshaping 4D STEM datasets. That experience
+        really changed the way I look at open source, which led me to start
+        <a href="https://openhack.gitbook.io/openhack-20/" target="_blank"
+          >FOSS OpenHack '20</a
+        >
+        — a program which helped 25+ students with building 10+ open source
+        projects and contributing to 5+ major open source organisations. I also
+        used to do WordPress development for my parents'
+        <a href="https://www.telecomlead.com/" target="_blank">news sites</a>,
+        and for clients as a freelancer, and used to write articles and produce
+        videos about gadgets at GizmoLead.
       </p>
       <p>
-        I'm on <a href="https://github.com/anandbaburajan/" target="_blank">GitHub</a>, <a href="https://twitter.com/anandbaburajan" target="_blank">Twitter</a> and <a href="https://www.linkedin.com/in/anandbaburajan/" target="_blank">LinkedIn</a> too. <a href="mailto:anandbaburajan@gmail.com" target="_blank">Here</a>'s my email address. Feel free to get in touch about anything! Thinking about working together? <a href="https://anandbaburajan.github.io/static/anand_baburajan.pdf" target="_blank">Here</a>'s my résumé, and while you're still here, <a href="https://www.youtube.com/watch?v=sYmQQn_ZSys" target="_blank">here</a>'s a video of a rocket landing. Because, why not?
+        I'm on
+        <a href="https://github.com/anandbaburajan/" target="_blank">GitHub</a>,
+        <a href="https://twitter.com/anandbaburajan" target="_blank">Twitter</a>
+        and
+        <a href="https://www.linkedin.com/in/anandbaburajan/" target="_blank"
+          >LinkedIn</a
+        >
+        too.
+        <a href="mailto:anandbaburajan@gmail.com" target="_blank">Here</a>'s my
+        email address. Feel free to get in touch about anything! Thinking about
+        working together?
+        <a
+          href="https://anandbaburajan.github.io/static/anand_baburajan.pdf"
+          target="_blank"
+          >Here</a
+        >'s my résumé, and while you're still here,
+        <a href="https://www.youtube.com/watch?v=sYmQQn_ZSys" target="_blank"
+          >here</a
+        >'s a video of a rocket landing. Because, why not?
       </p>
-      <p>
-		: )
-      </p>
+      <p>: )</p>
     </div>
   </body>
 </html>
