insert a good commit message here

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="”description”" content="Hi there — I'm Anand." />
+    <meta name="description" content="Hi there — I'm Anand." />
     <style>
       @font-face {
         font-family: "Space Grotesk";
@@ -39,8 +39,21 @@
           margin: 0;
           transform: translate(-50%, 0%);
           position: absolute;
+          margin-top: 2em;
           left: 50%;
         }
+      }
+
+      ::-webkit-scrollbar {
+        width: 10px;
+      }
+
+      ::-webkit-scrollbar-track {
+        background: #1a1a1a;
+      }
+
+      ::-webkit-scrollbar-thumb {
+        background: #b1b1b1;
       }
     </style>
     <meta
