--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
       <p>
         I particularly like tech, space, philosophy and psychology. These days
         I'm building
-        <a href="https://www.kukkee.com/" target="_blank">Kukkee</a>,
-        contributing to
-        <a href="https://libertem.github.io/" target="_blank">LiberTEM</a>, and
+        <a href="https://www.kukkee.com/" target="_blank">Kukkee</a> and
         learning computer science. I'm an optimistic nihilist and I pass the
         time before turning back into cosmic dust by learning and building
         things, loving an awe-inspiring and sweet human, reading books and
