--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
           >LinkedIn</a
         >
         too.
-        <a href="mailto:anandbaburajan@gmail.com" target="_blank">Here</a>'s my
-        email address. Feel free to get in touch about anything! Thinking about
-        working together?
+        Feel free to get in touch by
+        <a href="mailto:anandbaburajan@gmail.com" target="_blank">email</a> or
+        <a href="https://cal.com/anandbaburajan/30min" target="_blank">schedule</a>
+        a call with me. Thinking about working together?
         <a
           href="https://anandbaburajan.github.io/static/anand_baburajan.pdf"
           target="_blank"
