--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
     <div id="container">
       Hi, I'm Anand.
       <p>
-        I particularly like tech, space, philosophy and psychology. These days
-        I'm building
+        These days I'm building
         <a href="https://www.kukkee.com/" target="_blank">Kukkee</a> and
         learning computer science. I'm an optimistic nihilist and I pass the
         time before turning back into cosmic dust by learning and building
