--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           >FOSS OpenHack '20</a
         >
         — a program which helped 25+ students with building 10+ open source
-        projects and contributing to 5+ major open source organisations. I also
+        projects and contributing to 5+ major organisations. I also
         used to do WordPress development for my parents'
         <a href="https://www.telecomlead.com/" target="_blank">news sites</a>,
         and for clients as a freelancer, and used to write articles and produce
