--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
       <p>
         In the past, I've worked at
         <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a> as
-        an intern, where I built the HackerRank Interviews for Slack
+        a software engineer intern, where I built the HackerRank Interviews for Slack
         integration, along with several other features. I have been a
         <a
           href="https://summerofcode.withgoogle.com/archive/2020/projects/5402292951449600"
           target="_blank"
           >Google Summer of Code '20</a
         >
-        student at LiberTEM (under the PSF), where I built features for handling
+        developer at LiberTEM (under the PSF), where I built features for handling
         sync/acquisition issues and reshaping 4D STEM datasets. That experience
         really changed the way I look at open source, which led me to start
         <a href="https://openhack.gitbook.io/openhack-20/" target="_blank"
