--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         learning computer science. I'm an optimistic nihilist and I pass the
         time before turning back into cosmic dust by learning and building
         things, loving an awe-inspiring and sweet human, reading books and
-        blogs, listening to stories, stargazing, exploring our planet, cooking,
+        blogs, listening to stories, meeting new people, stargazing, exploring our planet, cooking,
         contributing to open source projects, empowering people around me, going
         out for walks with my brother and dog, watching movies and listening to
         music.
