--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Hi there — I'm Anand." />
+    <meta name="description" content="Hi — I'm Anand." />
     <style>
       @font-face {
         font-family: "Space Grotesk";
