--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <p>
         In the past, I've worked at
         <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a> as
-        a software engineer intern, where I built the HackerRank Interviews for Slack
+        a SDE intern, where I built the HackerRank Interviews for Slack
         integration, along with several other features. I have been a
         <a
           href="https://summerofcode.withgoogle.com/archive/2020/projects/5402292951449600"
