--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         learning computer science. I'm an optimistic nihilist and I pass the
         time before turning back into cosmic dust by learning and building
         things, loving an awe-inspiring and sweet human, reading books and
-        blogs, listening to stories, meeting new people, stargazing, exploring our planet, cooking,
-        contributing to open source projects, empowering people around me, going
-        out for walks with my brother and dog, watching movies and listening to
-        music.
+        blogs, listening to stories, meeting new people, stargazing, exploring our planet,
+        cooking, working out, contributing to open source projects, empowering people around me,
+        going out for walks with my <a href="https://aryanbaburajan.github.io/" target="_blank">brother</a> and dog,
+        watching movies and listening to music.
       </p>
       <p>
         In the past, I've worked at
