--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           target="_blank"
           >Google Summer of Code '20</a
         >
-        developer at LiberTEM (under the PSF), where I built features for handling
+        developer at <a href="https://libertem.github.io/LiberTEM" target="_blank">LiberTEM</a> (under the PSF), where I built features for handling
         sync/acquisition issues and reshaping 4D STEM datasets. That experience
         really changed the way I look at open source, which led me to start
         <a href="https://openhack.gitbook.io/openhack-20/" target="_blank"
