--- a/index.html
+++ b/index.html
@@ -107,10 +107,9 @@
           >LinkedIn</a
         >.
         Feel free to get in touch by
-        <a href="mailto:anandbaburajan@gmail.com" target="_blank">email</a>,
-        <a href="tel:7827534524">phone</a> or 
+        <a href="mailto:anandbaburajan@gmail.com" target="_blank">email</a> or 
         <a href="https://cal.com/anandbaburajan/30min" target="_blank">schedule</a>
-        a quick Sunday evening video call with me. Thinking about working together?
+        a quick Sunday evening call with me. Thinking about working together?
         <a
           href="https://anandbaburajan.github.io/static/anand_baburajan.pdf"
           target="_blank"
