--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Hi — I'm Anand." />
+    <meta
+      name="title"
+      content="Anand Baburajan"
+    />
+    <meta
+      name="description"
+      content="Hi, I'm Anand. Welcome to my space on the internet!"
+    />
     <style>
       @font-face {
         font-family: "Space Grotesk";
