--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           target="_blank"
           >Google Summer of Code '20</a
         >
-        developer at <a href="https://libertem.github.io/LiberTEM" target="_blank">LiberTEM</a> (under the PSF), where I built features for handling
+        developer at <a href="https://libertem.github.io/LiberTEM" target="_blank">LiberTEM</a>, where I built features for handling
         sync/acquisition issues and reshaping 4D STEM datasets. That experience
         really changed the way I look at open source, which led me to start
         <a href="https://openhack.gitbook.io/openhack-20/" target="_blank"
@@ -115,8 +115,8 @@
         >.
         Feel free to get in touch by
         <a href="mailto:anandbaburajan@gmail.com" target="_blank">email</a> or 
-        <a href="https://cal.com/anandbaburajan/30min" target="_blank">schedule</a>
-        a quick Sunday evening call with me. Thinking about working together?
+        <a href="https://cal.com/anandbaburajan/hello" target="_blank">jump</a>
+        on a quick Sunday evening call with me. Thinking about working together?
         <a
           href="https://anandbaburajan.github.io/static/anand_baburajan.pdf"
           target="_blank"
