--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="description"
-      content="Hi, I'm Anand. Welcome to my space on the internet!"
+      content="Welcome to Anand's space on the internet!"
     />
     <style>
       @font-face {
@@ -70,61 +70,67 @@
   </head>
   <body>
     <div id="container">
-      Hi, I'm Anand.
+      Hello! I'm Anand.
       <p>
-        These days I'm building
-        <a href="https://www.kukkee.com/" target="_blank">Kukkee</a> and
-        learning computer science. I'm an optimistic nihilist and I pass the
-        time before turning back into cosmic dust by learning and building
-        things, loving an awe-inspiring and sweet human, reading books and
-        blogs, listening to stories, meeting new people, stargazing, exploring our planet,
-        cooking, working out, contributing to open source projects, empowering people around me,
-        going out for walks with my <a href="https://aryanbaburajan.github.io/" target="_blank">brother</a> and dog,
-        watching movies and listening to music.
-      </p>
-      <p>
-        In the past, I've worked at
+        These days I'm learning computer science and building
+        <a href="https://www.kukkee.com/" target="_blank">Kukkee</a>.
+        Previously, I worked at
         <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a> as
-        a SDE intern, where I built the HackerRank Interviews for Slack
-        integration, along with several other features. I have been a
+        a software engineer intern, where I primarily built the HackerRank Interviews for Slack
+        integration, along with several features for HackerRank for Work. I was a
         <a
           href="https://summerofcode.withgoogle.com/archive/2020/projects/5402292951449600"
           target="_blank"
           >Google Summer of Code '20</a
         >
-        developer at <a href="https://libertem.github.io/LiberTEM" target="_blank">LiberTEM</a>, where I built features for handling
-        sync/acquisition issues and reshaping 4D STEM datasets. That experience
-        really changed the way I look at open source, which led me to start
+        developer at
+        <a href="https://libertem.github.io/LiberTEM" target="_blank">LiberTEM</a>,
+        where I built features for handling sync/acquisition issues and reshaping
+        4D STEM datasets. That experience really changed the way I look at open source,
+        which led me to start
         <a href="https://openhack.gitbook.io/openhack-20/" target="_blank"
           >FOSS OpenHack '20</a
         >
         — a program which helped 25+ students with building 10+ open source
-        projects and contributing to 5+ major organisations. I also
-        used to do WordPress development for my parents'
-        <a href="https://www.telecomlead.com/" target="_blank">news sites</a>,
-        and for clients as a freelancer, and used to write articles and produce
-        videos about gadgets at GizmoLead.
+        projects and contributing to 5+ major open source
+        projects. I helped build my parents'
+        <a href="https://www.telecomlead.com/" target="_blank">news sites</a>
+        in WordPress and did freelance WordPress development for 5+ clients.
+        During high school, I wrote articles and produced tech YouTube videos about
+        gadgets at GizmoLead.
+      </p>
+      <p>I pass my spare
+        time before turning back into cosmic dust by reading books and
+        blogs, loving an awe-inspiring and sweet human, meeting new people,
+        stargazing, exploring our planet,
+        cooking, running with my
+        <a href="https://aryanbaburajan.github.io/" target="_blank">brother</a> and dog,
+        meditating, working out, helping people believe in themselves to make the best of
+        their finite number of years on this planet, watching movies and listening to music.
       </p>
       <p>
-        I'm on
-        <a href="https://github.com/anandbaburajan/" target="_blank">GitHub</a>,
-        <a href="https://twitter.com/anandbaburajan" target="_blank">Twitter</a>
-        and
+        Feel free to
+        <a href="mailto:anandbaburajan@gmail.com" target="_blank">get in touch</a>
+        via email, <a href="https://cal.com/anandbaburajan/hello" target="_blank">jump</a>
+        on a quick Sunday evening call or connect with me on
+        <a href="https://twitter.com/anandbaburajan" target="_blank">Twitter</a>,
+        <a href="https://github.com/anandbaburajan/" target="_blank">GitHub</a>
+        or
         <a href="https://www.linkedin.com/in/anandbaburajan/" target="_blank"
           >LinkedIn</a
-        >.
-        Feel free to get in touch by
-        <a href="mailto:anandbaburajan@gmail.com" target="_blank">email</a> or 
-        <a href="https://cal.com/anandbaburajan/hello" target="_blank">jump</a>
-        on a quick Sunday evening call with me. Thinking about working together?
+        >. I’m always open to interesting conversations and collaboration!
+        Thinking about working together?
         <a
           href="https://anandbaburajan.github.io/static/anand_baburajan.pdf"
           target="_blank"
           >Here</a
-        >'s my résumé, and while you're still here,
+        >'s my résumé.
+      </p>
+      <p>
+      	Alright, since you've read this far,
         <a href="https://www.youtube.com/watch?v=sYmQQn_ZSys" target="_blank"
           >here</a
-        >'s a video of a rocket landing. Because, why not?
+        >'s a video of a rocket landing. Because why not?
       </p>
       <p>: )</p>
     </div>
