--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         cooking, running with my
         <a href="https://aryanbaburajan.github.io/" target="_blank">brother</a> and dog,
         meditating, working out, helping people believe in themselves to make the best of
-        their finite number of years on this planet, watching movies and listening to music.
+        their finite time on this planet, watching movies and listening to music.
       </p>
       <p>
         Feel free to
