--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="./static/fav.ico" sizes="any">
     <meta
       name="title"
       content="Anand Baburajan"
@@ -85,9 +86,9 @@
         >
         developer at
         <a href="https://libertem.github.io/LiberTEM" target="_blank">LiberTEM</a>,
-        where I built features for handling sync/acquisition issues and reshaping
-        4D STEM datasets. That experience really changed the way I look at open source,
-        which led me to start
+        where I enhanced the data pipeline to allow reshaping pixelated STEM datasets and built
+        a feature for handling datasets with sync/acquisition issues.
+        That experience really changed the way I look at open source, which led me to start
         <a href="https://openhack.gitbook.io/openhack-20/" target="_blank"
           >FOSS OpenHack '20</a
         >
