--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         Previously, I worked at
         <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a> as
         a software engineer intern, where I primarily built the HackerRank Interviews for Slack
-        integration, along with several features for HackerRank for Work. I was a
+        integration, along with a bunch of features for HackerRank for Work. I was a
         <a
           href="https://summerofcode.withgoogle.com/archive/2020/projects/5402292951449600"
           target="_blank"
