--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
           url("./static/space-grotesk-v5-latin-500.woff") format("woff");
       }
       body {
-        background: #1a1a1a;
-        color: #b1b1b1;
+        background: #000101;
+        color: #c8c8c8;
         font-family: "Space Grotesk";
       }
       a {
-        text-decoration: underline;
-        color: #b1b1b1;
+        color: #c8c8c8;
+        text-decoration: underline dotted;
+        text-underline-offset: 0.1em;
       }
       a:hover {
-        color: #cecece;
+        text-decoration: underline;
       }
       #container {
         font-size: 0.8em;
@@ -71,7 +72,9 @@
   </head>
   <body>
     <div id="container">
-      Hello! I'm Anand.
+      <p>
+      	Hello! I'm Anand.
+      </p>
       <p>
         These days I'm learning computer science and building
         <a href="https://www.kukkee.com/" target="_blank">Kukkee</a>.
@@ -133,7 +136,6 @@
           >here</a
         >'s a video of a rocket landing. Because why not?
       </p>
-      <p>: )</p>
     </div>
   </body>
 </html>
