--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         time before turning back into cosmic dust by reading books and
         blogs, loving an awe-inspiring and sweet human, meeting new people,
         stargazing, exploring our planet,
-        cooking, running with my
+        running with my
         <a href="https://aryanbaburajan.github.io/" target="_blank">brother</a> and dog,
         meditating, working out, helping people believe in themselves to make the best of
         their finite time on this planet, watching movies and listening to music.
