--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       name="description"
-      content="Welcome to Anand's space on the internet!"
+      content="Hello! I'm Anand. Welcome to my space on the internet! These days I'm learning computer science and building Kukkee."
     />
     <style>
       @font-face {
@@ -31,11 +31,11 @@
       }
       a {
         color: #c8c8c8;
-        text-decoration: underline dotted;
+        text-decoration: underline;
         text-underline-offset: 0.1em;
       }
       a:hover {
-        text-decoration: underline;
+        text-decoration: underline dotted;
       }
       #container {
         font-size: 0.8em;
