--- a/index.html
+++ b/index.html
@@ -103,14 +103,12 @@
         During high school, I wrote articles and produced tech YouTube videos about
         gadgets at GizmoLead.
       </p>
-      <p>I pass my spare
-        time before turning back into cosmic dust by reading books and
-        blogs, loving an awe-inspiring and sweet human, meeting new people,
-        stargazing, exploring our planet,
-        running with my
-        <a href="https://aryanbaburajan.github.io/" target="_blank">brother</a> and dog,
-        meditating, working out, helping people believe in themselves to make the best of
-        their finite time on this planet, watching movies and listening to music.
+      <p>Everyday, I meditate, work out, go running with my brother and dog, love an awe-inspiring
+        and sweet human, stargaze, read a book or some blogs, and cook okay-ish dinner while listening to music.
+        On weekends, I enjoy spending time with the aforementioned human, meeting new people
+        and learning from their experiences, exploring real-world problems, reading about startups,
+        learning new things, helping people believe in themselves to make the best of their finite time on this planet,
+        exploring our planet, watching movies, or experiencing something different.
       </p>
       <p>
         Feel free to
